--- a/index.html
+++ b/index.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
-<html lang>
+<html lang="en">
 <meta charset="utf-8">
-<title>formula</title>
-<meta name=viewport content="width=device-width, initial-scale=1">
+<title>fable</title>
+<meta name=viewport content="width=device-width">
 <meta name=color-scheme content="dark">
-<meta name=theme-color content="black">
-<link rel="stylesheet" href="color.css" media=(color)>
-<link rel="stylesheet" href="formula.css">
-<link rel="help" href="https://mdn.io/mathml">
+<meta name=theme-color content="hotpink">
+<link rel="stylesheet" href="fable.css" media=(color)>
+<link rel="stylesheet" href="facet.css" media="all">
+<link rel="prev" href="https://webmural.com/moon">
+<link rel="help" href="https://webmural.dev/fable">
 
-<main>
-  <math>
-    <mtext>...</mtext>
-    <mo href="https://github.com/webmural/formula">?</mo>
-    <mtext>...</mtext>
-  </math>
-</main>
+<article>
+  <h1>th¡s 1<a href="/dm">dm</a> at ban<a href="/uranus">dc</a>amp</h1>
+  <p><a href="/nature">animals</a> were cooperating
+  <p>werewolf paced <a href="/about">about</a> peace
+  <p><b>&apos;</b>s<a href="/gerbera">uv</a> <a href="/mussel">heart</a> <b>+</b> <a href="/sol">sol</a>
+  <p><a href="/bat"><s>v</s>am<b>p</b></a><b>h</b>ear<s>d</s> <a href="/octopus">voices</a>
+  <p><abbr>re</abbr><a href="/wind">wind</a>
+</article>
