--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <meta name=viewport content="width=device-width">
 <meta name=color-scheme content="dark">
 <meta name=theme-color content="hotpink">
+<meta name=description content="heartbeat nature">
 <link rel="stylesheet" href="fable.css" media=(color)>
 <link rel="stylesheet" href="facet.css" media="all">
 <link rel="prev" href="https://webmural.com/moon">
